# simple-sr

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: activation.h  conv2d.h  dense.h  labels.h  max_pooling.h  model.h  preprocess.h  samples.h  signal.h  tensor.h  utils.h  weights.h
src/: conv2d.cc  main.cc  model.cc  samples.cc  signal.cc  utils.cc
test/: CMakeLists.txt  signal_test.cc  signal_test.h
tools/: detect-stream.py  detect.py  record
